--- a/SoundLove/SoundLove/Base.lproj/Main.storyboard
+++ b/SoundLove/SoundLove/Base.lproj/Main.storyboard
@@ -444,11 +444,11 @@
                         <viewControllerLayoutGuide type="bottom" id="srb-wS-dPz"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="13S-qQ-oHG">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="518"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ROQ-4Z-w1k">
-                                <rect key="frame" x="0.0" y="90" width="320" height="478"/>
+                                <rect key="frame" x="0.0" y="90" width="320" height="428"/>
                                 <connections>
                                     <segue destination="9vs-jc-CUs" kind="embed" identifier="openInfoView" id="oi1-bi-ITa"/>
                                 </connections>
@@ -1457,7 +1457,7 @@
                         <viewControllerLayoutGuide type="bottom" id="DKR-dV-1ay"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="g8S-bg-b69">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="478"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="428"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2g3-bc-CdD" userLabel="navigation bar" customClass="CustomNavigationView">
@@ -1501,7 +1501,7 @@
                                 </connections>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" indicatorStyle="white" keyboardDismissMode="interactive" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="76" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="gAX-iQ-bSz">
-                                <rect key="frame" x="0.0" y="50" width="320" height="333"/>
+                                <rect key="frame" x="0.0" y="50" width="320" height="283"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="70" id="Jza-O5-g5J" customClass="TicketShopTableViewCell">
@@ -1541,7 +1541,7 @@
                                 </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="osO-Y8-IZY" customClass="RoundedButton">
-                                <rect key="frame" x="30" y="398" width="260" height="65"/>
+                                <rect key="frame" x="30" y="348" width="260" height="65"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="65" id="NjR-TF-NfD"/>
                                 </constraints>
@@ -1591,11 +1591,11 @@
                         <viewControllerLayoutGuide type="bottom" id="2EL-Hk-1QI"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="pyL-B8-wuj">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="518"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UbI-3A-HqN" customClass="InviteFriendButton">
-                                <rect key="frame" x="20" y="498" width="280" height="50"/>
+                                <rect key="frame" x="20" y="448" width="280" height="50"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="NfS-gm-lXV"/>
@@ -1609,10 +1609,10 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GgQ-Sx-EP0">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="468"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="418"/>
                                 <subviews>
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" directionalLockEnabled="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ELz-I7-8UA" customClass="LoadingCollectionView">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="428"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="378"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iAS-zz-BB9">
                                             <size key="itemSize" width="100" height="100"/>
@@ -1664,7 +1664,7 @@
                                         </connections>
                                     </collectionView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2NK-6c-LyR" customClass="CustomPageControlView">
-                                        <rect key="frame" x="0.0" y="428" width="320" height="40"/>
+                                        <rect key="frame" x="0.0" y="378" width="320" height="40"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" image="emptyKalendar" translatesAutoresizingMaskIntoConstraints="NO" id="Vmu-UE-Qfx">
@@ -1734,14 +1734,14 @@
                         <viewControllerLayoutGuide type="bottom" id="LYa-zO-dRc"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="m5D-fX-Qop">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="478"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="428"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0PR-Hv-obw">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="478"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="428"/>
                             </scrollView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kjf-wU-5LA" userLabel="content view">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="478"/>
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="428"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8sC-Ig-kJh" userLabel="image holder view">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="190"/>
@@ -1779,10 +1779,10 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zFM-dr-IVX">
-                                        <rect key="frame" x="0.0" y="190" width="320" height="288"/>
+                                        <rect key="frame" x="0.0" y="190" width="320" height="238"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cRA-AE-i4P" customClass="InviteFriendButton">
-                                                <rect key="frame" x="20" y="218" width="280" height="50"/>
+                                                <rect key="frame" x="20" y="168" width="280" height="50"/>
                                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="dK7-GK-pTq"/>
@@ -1796,7 +1796,7 @@
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H6Z-bd-Fw3" customClass="RoundedButton">
-                                                <rect key="frame" x="20" y="153" width="280" height="50"/>
+                                                <rect key="frame" x="20" y="103" width="280" height="50"/>
                                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="4ws-UW-JMD"/>
@@ -1843,7 +1843,7 @@ noch 40 Tage</string>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" horizontalCompressionResistancePriority="752" text="ab 25,00 €" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="193" translatesAutoresizingMaskIntoConstraints="NO" id="JAG-zM-QA1">
-                                                <rect key="frame" x="108" y="87" width="193" height="17"/>
+                                                <rect key="frame" x="108" y="87" width="193" height="6"/>
                                                 <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="14"/>
                                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -1934,14 +1934,14 @@ noch 40 Tage</string>
                         <viewControllerLayoutGuide type="bottom" id="zOo-d9-aA2"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="DpW-6w-9Go">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="518"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YYu-SX-zPo">
-                                <rect key="frame" x="0.0" y="190" width="320" height="378"/>
+                                <rect key="frame" x="0.0" y="190" width="320" height="328"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SHq-wm-lSa" customClass="RoundedButton">
-                                        <rect key="frame" x="20" y="308" width="280" height="50"/>
+                                        <rect key="frame" x="20" y="258" width="280" height="50"/>
                                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="dn8-ZM-gEL"/>
@@ -2240,7 +2240,7 @@ noch 40 Tage</string>
         <image name="Filter" width="23" height="20"/>
         <image name="backButton" width="12" height="19"/>
         <image name="bandsIcon" width="40" height="40"/>
-        <image name="calendarButton" width="35" height="31"/>
+        <image name="calendarButton" width="40" height="36"/>
         <image name="calendarIcon" width="40" height="40"/>
         <image name="closeButton" width="20" height="19"/>
         <image name="emptyKalendar" width="96" height="96"/>
@@ -2260,7 +2260,7 @@ noch 40 Tage</string>
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="dyG-rT-cYK"/>
+        <segue reference="cP4-gr-8Ir"/>
         <segue reference="Wrr-Lt-We3"/>
     </inferredMetricsTieBreakers>
 </document>
